Fix host and endpoint
