# internal/controllers/review_controller.go
@@ -36,7 +36,7 @@ func NewReviewController(usecase usecases.ReviewUsecase) ReviewController {
 // @Produce json
 // @Success 200 {array} models.Review
 // @Failure 500 {object} map[string]interface{}
-// @Router /reviews [get]
+// @Router /api/reviews [get]
 func (ctrl *reviewController) GetAllReviews(c *gin.Context) {
 	reviews, err := ctrl.uc.GetAllReviews()
 	if err != nil {
@@ -56,7 +56,7 @@ func (ctrl *reviewController) GetAllReviews(c *gin.Context) {
 // @Param id path string true "Review ID"
 // @Success 200 {object} models.Review
 // @Failure 500 {object} map[string]interface{}
-// @Router /reviews/{id} [get]
+// @Router /api/reviews/{id} [get]
 func (ctrl *reviewController) GetReviewByID(c *gin.Context) {
 	id := c.Param("id")
 	review, err := ctrl.uc.GetReviewByID(c.GetUint(id))
@@ -81,7 +81,7 @@ func (ctrl *reviewController) GetReviewByID(c *gin.Context) {
 // @Failure 401 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
 // @Security ApiKeyAuth
-// @Router /reviews [post]
+// @Router /api/reviews [post]
 func (ctrl *reviewController) CreateReview(c *gin.Context) {
 	var req models.ReviewRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -128,7 +128,7 @@ func (ctrl *reviewController) CreateReview(c *gin.Context) {
 // @Failure 400 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
 // @Security ApiKeyAuth
-// @Router /reviews/{id} [put]
+// @Router /api/reviews/{id} [put]
 func (ctrl *reviewController) UpdateReviewByID(c *gin.Context) {
 	var req models.ReviewRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -157,7 +157,7 @@ func (ctrl *reviewController) UpdateReviewByID(c *gin.Context) {
 // @Success 200 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
 // @Security ApiKeyAuth
-// @Router /reviews/{id} [delete]
+// @Router /api/reviews/{id} [delete]
 func (ctrl *reviewController) DeleteReviewByID(c *gin.Context) {
 	id := c.Param("id")
 
